--- a/resources/assets/sass/arklab/sass/main.scss
+++ b/resources/assets/sass/arklab/sass/main.scss
@@ -11,6 +11,8 @@ html, body {
 	font-family: "微軟正黑體", "微软雅黑", Helvetica, Arial, "メイリオ", "맑은 고딕", sans-serif !important;
 	height: 100%;
 	width: 100%;
+
+	color: #37474F;
 }
 
 .fadeIn {
