--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url(http://fonts.googleapis.com/earlyaccess/cwtexhei.css);
 @-webkit-keyframes fadeIn {
   0% {
     opacity: 0;
@@ -119,7 +120,7 @@
     transform: translateY(0);
   }
 }
-/* line 10, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 11, ../../resources/assets/sass/arklab/sass/main.scss */
 html, body {
   font-family: "微軟正黑體", "微软雅黑", Helvetica, Arial, "メイリオ", "맑은 고딕", sans-serif !important;
   height: 100%;
@@ -127,7 +128,12 @@ html, body {
   color: #37474F;
 }
 
-/* line 18, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 21, ../../resources/assets/sass/arklab/sass/main.scss */
+* {
+  font-family: 'cwTeXHei', sans-serif;
+}
+
+/* line 25, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeIn {
   -webkit-animation-duration: 500ms;
   -moz-animation-duration: 500ms;
@@ -147,7 +153,7 @@ html, body {
   animation-name: fadeIn;
 }
 
-/* line 22, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 29, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeInDown {
   -webkit-animation-duration: 500ms;
   -moz-animation-duration: 500ms;
@@ -167,7 +173,7 @@ html, body {
   animation-name: fadeInDown;
 }
 
-/* line 26, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 33, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeInRight {
   -webkit-animation-duration: 500ms;
   -moz-animation-duration: 500ms;
@@ -187,7 +193,7 @@ html, body {
   animation-name: fadeInRight;
 }
 
-/* line 30, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 37, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeInFast {
   -webkit-animation-duration: 300ms;
   -moz-animation-duration: 300ms;
@@ -207,7 +213,7 @@ html, body {
   animation-name: fadeIn;
 }
 
-/* line 34, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 41, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeInLeft {
   -webkit-animation-duration: 500ms;
   -moz-animation-duration: 500ms;
@@ -227,7 +233,7 @@ html, body {
   animation-name: fadeInLeft;
 }
 
-/* line 38, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 45, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeInLeftBig {
   -webkit-animation-duration: 500ms;
   -moz-animation-duration: 500ms;
@@ -247,7 +253,7 @@ html, body {
   animation-name: fadeInLeftBig;
 }
 
-/* line 42, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 49, ../../resources/assets/sass/arklab/sass/main.scss */
 .pageOne {
   height: 100%;
   width: 100%;
@@ -263,7 +269,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 55, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 62, ../../resources/assets/sass/arklab/sass/main.scss */
 .aboutPage {
   height: 100%;
   width: 100%;
@@ -278,7 +284,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 67, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 74, ../../resources/assets/sass/arklab/sass/main.scss */
 .eduPage {
   height: 100%;
   width: 100%;
@@ -293,7 +299,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 79, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 86, ../../resources/assets/sass/arklab/sass/main.scss */
 .productsPage {
   height: 100%;
   width: 100%;
@@ -307,7 +313,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 90, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 97, ../../resources/assets/sass/arklab/sass/main.scss */
 .flyProjectPage {
   height: 100%;
   width: 100%;
@@ -321,7 +327,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 101, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 108, ../../resources/assets/sass/arklab/sass/main.scss */
 .envirnmentPage {
   height: 60%;
   width: 100%;
@@ -335,7 +341,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 112, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 119, ../../resources/assets/sass/arklab/sass/main.scss */
 .documentsPage {
   height: 40%;
   width: 100%;
@@ -349,7 +355,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 123, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 130, ../../resources/assets/sass/arklab/sass/main.scss */
 .page-mask {
   height: 100%;
   width: 100%;
@@ -357,14 +363,100 @@ html, body {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-/* line 130, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 137, ../../resources/assets/sass/arklab/sass/main.scss */
+.unslider-arrow {
+  color: #FFFFFF;
+  font-size: 48px;
+  top: 30%;
+}
+
+/* line 143, ../../resources/assets/sass/arklab/sass/main.scss */
+.slider {
+  height: 60%;
+  position: absolute;
+  min-height: 300px;
+  color: white;
+}
+
+/* line 150, ../../resources/assets/sass/arklab/sass/main.scss */
+.block {
+  position: relative;
+  top: 60%;
+  width: 100%;
+  height: calc(40% - 64px);
+}
+
+/* line 157, ../../resources/assets/sass/arklab/sass/main.scss */
+.block-content {
+  height: 100%;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  background: black;
+}
+/* line 164, ../../resources/assets/sass/arklab/sass/main.scss */
+.block-content img {
+  position: absolute;
+  height: 100%;
+  width: auto;
+  margin: auto;
+  min-height: 100%;
+  min-width: 100%;
+  left: -100%;
+  right: -100%;
+  top: -100%;
+  bottom: -100%;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+/* line 184, ../../resources/assets/sass/arklab/sass/main.scss */
+.block-content .title {
+  font-size: 18px;
+  position: absolute;
+  z-index: 5;
+  color: white;
+  padding: 10px 10px 10px 10px;
+}
+
+/* line 194, ../../resources/assets/sass/arklab/sass/main.scss */
+.block-content .illustration {
+  color: white;
+  position: absolute;
+  visibility: hidden;
+}
+
+/* line 200, ../../resources/assets/sass/arklab/sass/main.scss */
+.block-content:hover .illustration {
+  visibility: visible;
+  color: white;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
+  height: 150px;
+  line-height: 150px;
+}
+
+/* line 210, ../../resources/assets/sass/arklab/sass/main.scss */
+.block-content:hover img {
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
+  opacity: 0.7;
+}
+
+/* line 216, ../../resources/assets/sass/arklab/sass/main.scss */
 #mark {
   padding-left: 10px;
   padding-top: 10px;
 }
 
 @media (min-width: 1200px) {
-  /* line 136, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 222, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 1170px;
@@ -375,13 +467,18 @@ html, body {
     left: 50%;
   }
 
-  /* line 146, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 232, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: none;
   }
+
+  /* line 236, ../../resources/assets/sass/arklab/sass/main.scss */
+  .block-content {
+    width: 25%;
+  }
 }
 @media (min-width: 992px) {
-  /* line 152, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 242, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 970px;
@@ -392,13 +489,18 @@ html, body {
     left: 50%;
   }
 
-  /* line 162, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 252, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: none;
   }
+
+  /* line 256, ../../resources/assets/sass/arklab/sass/main.scss */
+  .block-content {
+    width: 25%;
+  }
 }
 @media (min-width: 758px) {
-  /* line 168, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 262, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 750px;
@@ -409,13 +511,18 @@ html, body {
     left: 50%;
   }
 
-  /* line 178, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 272, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: none;
   }
+
+  /* line 276, ../../resources/assets/sass/arklab/sass/main.scss */
+  .block-content {
+    width: 25%;
+  }
 }
 @media (max-width: 768px) {
-  /* line 184, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 282, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 80%;
@@ -426,8 +533,13 @@ html, body {
     left: 50%;
   }
 
-  /* line 194, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 292, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: block;
+  }
+
+  /* line 296, ../../resources/assets/sass/arklab/sass/main.scss */
+  .block-content {
+    width: 50%;
   }
 }
