--- a/resources/assets/sass/arklab/sass/about.scss
+++ b/resources/assets/sass/arklab/sass/about.scss
@@ -1,6 +1,12 @@
 @import "compass/css3";
 @import "animated/animated";
 
+@import url(http://fonts.googleapis.com/earlyaccess/cwtexhei.css);
+
+* {
+	font-family: 'cwTeXHei', sans-serif;
+}
+
  #aboutCover {
  	height: 300px;
  	width: 100%;
@@ -19,4 +25,8 @@
     bottom: 0;
     left: 0;
     padding: 10px 10px 10px 10px;
+ }
+
+ .container {
+ 	color: #455A64;
  }
