--- a/resources/assets/sass/arklab/sass/main.scss
+++ b/resources/assets/sass/arklab/sass/main.scss
@@ -218,6 +218,12 @@ html, body {
 	padding-top: 10px;
 }
 
+#editIndexButton {
+	position: absolute;
+	right: 15px;
+	bottom: 15px;
+}
+
 @media (min-width: 1200px) {
 	.center {
 		position: absolute;
