--- a/public/css/main.css
+++ b/public/css/main.css
@@ -456,7 +456,7 @@ html, body {
 }
 
 /* line 221, ../../resources/assets/sass/arklab/sass/main.scss */
-#editIndexButton {
+.editButton {
   position: absolute;
   right: 15px;
   bottom: 15px;
